--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 
 <body>
   <button id="start-button">Start</button>
-  <button id="start-0-button"></button>
+  <button type="button" style="height: 50px;" id="start-0-button">
+    <img src="assets/images/image1.png" alt="Button Image" style="height: 100%;">
+  </button>
+  <!-- <button id="start-0-button">__<img src="assets/images/image1.png" height ="30" width="40"/>__</button>
   <button id="start-1-button"><img src="assets/images/image2.png" height ="30" width="40"/></button>
-  <button id="start-2-button"><img src="assets/images/image3.png" height ="30" width="40"/></button>
+  <button id="start-2-button"><img src="assets/images/image3.png" height ="30" width="40"/></button> -->
   <!-- <button id="start-3-button"><img src="assets/images/art.jpg" height ="30" width="40"/></button> -->
 </body>
 
