--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
     }
     #start-0-button {
       z-index: 10;
-      left: 47.5px;
+      left: 60px;
       position: absolute;
     }
     #start-1-button {
       z-index: 10;
-      left: 115px;
+      left: 162.5px;
       position: absolute;
     }
     #start-2-button {
       z-index: 10;
-      left: 182.5px;
+      left: 265px;
       position: absolute;
     }
-    #start-3-button {
+    /* #start-3-button {
       z-index: 10;
-      left: 250px;
+      left: 290px;
       position: absolute;
-    }
+    } */
   </style>
 </head>
 
@@ -44,6 +44,12 @@
   <button id="start-button">Start</button>
   <button type="button" style="height: 50px;" id="start-0-button">
     <img src="assets/images/image1.png" alt="Button Image" style="height: 100%;">
+  </button>
+  <button type="button" style="height: 50px;" id="start-1-button">
+    <img src="assets/images/image2.png" alt="Button Image" style="height: 100%;">
+  </button>
+  <button type="button" style="height: 50px;" id="start-2-button">
+    <img src="assets/images/image3.png" alt="Button Image" style="height: 100%;">
   </button>
   <!-- <button id="start-0-button">__<img src="assets/images/image1.png" height ="30" width="40"/>__</button>
   <button id="start-1-button"><img src="assets/images/image2.png" height ="30" width="40"/></button>
